--- a/edubot/pubspec.yaml
+++ b/edubot/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_auth: ^5.5.3
   cloud_firestore: ^5.6.7
   google_sign_in: ^6.3.0
+  http: ^1.4.0
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
