--- a/edubot/pubspec.yaml
+++ b/edubot/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_sign_in: ^6.3.0
   http: ^1.4.0
   provider: ^6.1.5
+  file_picker: ^10.1.9
 
 dev_dependencies:
   flutter_test:
